# linkerland

./: Cargo.toml  Readme.md  release.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/tests/: test_cli.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/parser/tests/: integration_test.rs
crates/parser/tests/fixtures/: linker.map  sample.map
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  event.rs  filter.rs  lib.rs  sort.rs  style.rs  units.rs
crates/tui/src/state/: mod.rs  objects.rs  symbols.rs
crates/tui/src/ui/: mod.rs  view.rs
crates/tui/src/ui/components/: footer.rs  header.rs  help.rs  mod.rs  objects.rs  shared.rs  status.rs  symbols.rs
docs/: HowTo.md
src/: main.rs
