[package]
name = "linkerland"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
parser = { path = "../parser" }
tui = { path = "../tui" }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
