[package]
description = "a tiny workbench for parsing, visualizing & analyzing linker artifacts."
name = "linkerland"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shrirambalaji/linkerland"
keywords = ["linker", "map", "binary", "tui", "linkermapviz"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
linkerland-parser = { version = "0.1.1", path = "../parser" }
linkerland-tui = { version = "0.1.0", path = "../tui" }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
