[package]
name = "linkerland-metrics"
version = "0.1.1"
edition = "2021"
description = "Metrics aggregation and analysis for linker map files - part of linkerland"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shrirambalaji/linkerland"
keywords = ["linker", "map", "metrics", "analysis"]
categories = ["development-tools"]

[dependencies]
linkerland-parser = { version = "0.1.1", path = "../parser" }
serde = { version = "1", features = ["derive"] }
